discussion/kv_engine/144357/144357_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-20640: Allow phosphor configuration to be provided in memcached.json

Allow for setting the phosphor configuration in memcached.json via
a tag named "phosphor" with the following attributes

    mode    The buffer mode to use: "ring" or "fixed"
    size    The size of the buffer to use (20MB in not specified)

Note that one needs to run the ioctl command to stop and start
the tracer for the change to take effect.

Change-Id: I23bd5410f3af60c8d47db0ca9bf645d2b0824109

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-01-26 12:57:44.000000000
Message: 
Uploaded patch set 2.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-26 13:43:27.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6726/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/settings.cc:220:33: error: no member named "parseBufferMode" in namespace "phosphor" [clang-diagnostic-error]
    const auto mode = phosphor::parseBufferMode(iter->get<std::string>());
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6726/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/settings.cc:220:33:
error: no member named "parseBufferMode" in namespace "phosphor" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6726/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33145/ : FAILURE

Compile error at ..\kv_engine\daemon\settings.cc(220): error C2039: "parseBufferMode": is not a member of "phosphor" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33145/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28523/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/daemon/settings.cc:220:33:
error: no member named "parseBufferMode" in namespace "phosphor"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28523/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7346/ : FAILURE

Compile error at [2021-01-26T13:02:32.110Z] ../kv_engine/daemon/settings.cc:220:33:
error: no member named "parseBufferMode" in namespace "phosphor"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7346/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8260/ : FAILURE

Compile error at [2021-01-26T13:35:16.762Z] ../kv_engine/daemon/settings.cc:220:33:
error: ?parseBufferMode? is not a member of ?phosphor?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8260/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8388/ : FAILURE

Compile error at [2021-01-26T13:28:21.292Z] ../kv_engine/daemon/settings.cc:220:33:
error: ?parseBufferMode? is not a member of ?phosphor?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8388/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8642/ : FAILURE

Compile error at [2021-01-26T13:32:55.458Z] ../kv_engine/daemon/settings.cc:220:33:
error: no member named "parseBufferMode" in namespace "phosphor"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8642/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16191/ : FAILURE

Compile error at [2021-01-26T13:36:31.542Z] ../kv_engine/daemon/settings.cc:220:33:
error: no member named "parseBufferMode" in namespace "phosphor"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16191/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5262/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-01-26 16:44:38.000000000
Message: 
Patch Set 2:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33155/ : FAILURE

Link error: error LNK2019: unresolved external symbol "public: __cdecl phosphor::TraceConfig::~TraceConfig(void)" (??1TraceConfig@phosphor@@QEAA@XZ) referenced in function "public: __cdecl std::unique_ptr<class phosphor::TraceConfig,struct std::default_delete<class phosphor::TraceConfig> >::~unique_ptr<class phosphor::TraceConfig,struct std::default_delete<class phosphor::TraceConfig> >(void)" (??1?$unique_ptr@VTraceConfig@phosphor@@U?$default_delete@VTraceConfig@phosphor@@@std@@@std@@QEAA@XZ) ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/33155/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/5270/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/6734/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/28531/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/7354/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/8268/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/8396/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/8650/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/16199/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
